<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opennav_coverage_demo</name>
  <version>0.0.1</version>
  <description>A demo using the Coverage Server, BT Nodes, and Coverage Navigator</description>
  <maintainer email="steve@opennav.org">Steve Macenski</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_util</depend>
  <depend>nav2_bringup</depend>
  <depend>opennav_coverage_msgs</depend>
  <depend>opennav_coverage_bt</depend>
  <depend>opennav_coverage</depend>
  <depend>opennav_row_coverage</depend>
  <depend>opennav_coverage_navigator</depend>
  <depend>backported_bt_navigator</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
